# ExplosionManagementSys

./: .gitignore  CMakeLIsts.txt
src/: CMakeLists.txt  main.cpp  resources.qrc
src/db/: db_manager.cpp  db_manager.h
src/entities/: algorithm_data.h
src/model/: algorithm_param_service.cpp  algorithm_param_service.h  algorithm_runner.cpp  algorithm_runner.h  algorithm_service.cpp  algorithm_table_model.cpp  algorithm_table_model.h  category_service.h  category_tree_model.cpp  category_tree_model.h
src/service/: algorithm_param_service.cpp  algorithm_service.cpp  algorithm_service.h  auth_service.cpp  auth_service.h  category_service.cpp  category_service.h
src/ui/: login_dialog.cpp  login_dialog.h  main_window.cpp  main_window.h
src/ui/components/: CMakeLists.txt  algo_edit_dialog.cpp  algo_edit_dialog.h  algorithm_edit_tab.cpp  algorithm_edit_tab.h  algorithm_run_dialog.cpp  algorithm_run_dialog.h  algorithm_run_tab.cpp  algorithm_run_tab.h  frameless_widget.cpp  frameless_widget.h  function_page.cpp  function_page.h  home_page.cpp  home_page.h  information_page.cpp  information_page.h  login_dialog.cpp  login_dialog.h  m_button.cpp  m_button.h  m_input.cpp  m_input.h  m_menu.cpp  m_menu.h  m_message_box.cpp  m_message_box.h  main_tab_bar.cpp  main_tab_bar.h  mask_widget.cpp  mask_widget.h  setting_page.cpp  setting_page.h  side_bar.cpp  side_bar.h  sider_bar.cpp  sider_bar.h  slide_stacked_widget.cpp  slide_stacked_widget.h  tab_bar.cpp  (+6 more)
styles/: style.qss
